--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+
+@import "~bootstrap/dist/css/bootstrap.css";
+
+body{
+  background-color: #060CE9;
+}
+
+.card {
+  background-color: #060CE9;
+  border: black 5px solid;
+  border-radius: 0px;
+}
+
+.card-body{
+  color: #FFFF00;
+}
