--- a/src/app/game-row/game-row.component.html
+++ b/src/app/game-row/game-row.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col card" *ngFor="let questionInfo of questionsArrayInfo"  style="height: 100px;">
-      <div class="card-body text-center">
+      <div class="card-body text-center" (click)="createPopUp()">
         {{questionInfo.points}}
       </div>
     </div>
