--- a/src/app/question-info-overlay/question-info-overlay.component.css
+++ b/src/app/question-info-overlay/question-info-overlay.component.css
@@ -9,12 +9,10 @@
   justify-content: center;
 }
 
-.closeButton {
-  position: relative;
-  bottom: -330px;
-
-}
-
 .spaceRadio {
   padding: 0 0 10px 10px;
+}
+
+.dailyDoubleIcon {
+
 }
