adding timer, adding deduction point function, adding font awesome timer icon, change size of screen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,9 +22,9 @@
     </div>
   </div>
 </div>
-<app-game-row [questionsArrayInfo]="points200"></app-game-row>
-<app-game-row [questionsArrayInfo]="points400"></app-game-row>
-<app-game-row [questionsArrayInfo]="points600"></app-game-row>
-<app-game-row [questionsArrayInfo]="points800"></app-game-row>
-<app-game-row [questionsArrayInfo]="points1000" ></app-game-row>
+<app-game-row [questionsArrayInfo]="r1"></app-game-row>
+<app-game-row [questionsArrayInfo]="r2"></app-game-row>
+<app-game-row [questionsArrayInfo]="r3"></app-game-row>
+<app-game-row [questionsArrayInfo]="r4"></app-game-row>
+<app-game-row [questionsArrayInfo]="r5" ></app-game-row>
 
