--- a/src/app/question-info-overlay/question-info-overlay.component.css
+++ b/src/app/question-info-overlay/question-info-overlay.component.css
@@ -13,27 +13,12 @@
   padding: 0 0 10px 10px;
 }
 
-.animatedDailyDouble {
-  background-image: url(../../assets/dailyDouble.png);
-  background-repeat: no-repeat;
-  background-position: left top;
-  height:500px;
-  width:500px;
-  -webkit-animation-duration: 4s;animation-duration: 4s;
-  -webkit-animation-fill-mode: both;animation-fill-mode: both;
+.clockIcon {
+  position: relative;
 }
 
-@-webkit-keyframes fadeOut {
-  0% {opacity: 1;}
-  100% {opacity: 0;}
-}
-
-@keyframes fadeOut {
-  0% {opacity: 1;}
-  100% {opacity: 0;}
-}
-
-.fadeOut {
-  -webkit-animation-name: fadeOut;
-  animation-name: fadeOut;
+.clockIcon:after {
+  content: "\f017";
+  font-family: FontAwesome;
+  font-size: 40px;
 }
