--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav id="headerLabel" class="navbar navbar-light jeopardyBlue" >
- <img src="../assets/JeopardyLogo.svg" height="80px" width="120px" style="color: yellow;">
+ <img src="../assets/JeopardyLogo.svg" height="80px" width="120px" style="color: yellow;" (click)="openExample()">
 </nav>
 <div id="scoreboard" class="container-fluid">
   <div class="row">
