--- a/src/app/question-info-overlay/question-info-overlay.component.css
+++ b/src/app/question-info-overlay/question-info-overlay.component.css
@@ -1,6 +1,20 @@
-
+p {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 45px;
+  color: yellow;
+}
+.questionImage {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  width: 300px;
+}
 .questionContainer {
   padding: 20px;
+  font-size: 30px;
 }
 
 .closingDiv {
